--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
     document.getElementById("path").textContent = window.location.pathname;
 
     // FREE LOGGING - Replace URL below with your webhook.site link
-    fetch("https://webhook.site/your-unique-id", {
+    fetch("https://webhook.site/531487b3-3912-47bd-b447-a6038bc5b8db", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
